--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "@prisma/client": "^5.19.0",
+    "axios": "^1.7.6",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1"
   }
 }
